# betz-api

./: README.md  requirements.txt
app/nn/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/nn/data/scripts/: nfl.py
app/nn/docs/: mkdocs.yml
app/nn/docs/docs/: index.md
app/nn/notebooks/: nfl.ipynb
app/nn/sports_betting_predictor/: plots.py
app/nn/sports_betting_predictor/modeling/: train.py
betzapi/: db.sqlite3  manage.py
betzapi/betz/: apps.py  urls.py
betzapi/betz/utils/: __init__.py  espn.py  fanduel.py  helper.py  oddsapi.py  openai.py  statmuse.py  test.py  utils.py
betzapi/betz/views/: betz_views.py  espn_views.py  external.py  nba_views.py  utils.py
betzapi/betzapi/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
betzapi/cache/: espn_players.json  espn_rosters.json
betzapi/examples/: v1.json  v2.json  v3.json
betzapi/nn/data/nfl/: crd_2020.csv  nfl_data.csv  sea_2015.csv  season_2014.csv  season_2015.csv  season_2016.csv  season_2018.csv  season_2020.csv  season_2021.csv
betzapi/nn/data/scripts/: custom_logger.py  nfl.py  utils.py
betzapi/nn/models/: nfl_model.keras
betzapi/nn/sports_betting_predictor/: __init__.py  dataset.py  features.py  nfl_training.ipynb
betzapi/nn/sports_betting_predictor/modeling/: predict.py
betzapi/results/: prop_eval_results.json
betzapi/scripts/: edit_espn_player_cache.py  espn_cache.py  validate_example_props.py
legacy/nn/data/nfl/: crd_2020.csv  nfl_data.csv  ram_2023.csv  ram_2024.csv  ram_2024_1.csv  (+4 more)
legacy/nn/models/: nfl_model.h5
legacy/views/: betz_views.py
(+6 files in other folders)
